[tool.poetry]
name = "embedding-api"
version = "0.2.0"
description = "Embedding Server"
authors = ["CodeLibs, Inc. <info@codelibs.co>"]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "2.2.2"
fastapi = "0.74.1"
uvicorn = "0.17.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
