[tool.poetry]
name = "embedding-api"
version = "1.0.1"
description = "Embedding Server"
authors = ["CodeLibs, Inc. <info@codelibs.co>"]

[tool.poetry.dependencies]
python = "^3.10"
sentence-transformers = "2.5.1"
fastapi = "0.110.0"
uvicorn = "0.27.1"

[tool.poetry.dev-dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
